fixed header alignment

--- a/home.css
+++ b/home.css
@@ -200,7 +200,6 @@ body{
     line-height: 1.25rem;
     font-size: 0.838rem;
     font-style: normal;
-    height: 3rem;
     align-content: center;
 }
 #menu ul li:last-child a{
